Do some refactoring

--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="source.js"></script>
 </head>
-<body><canvas id="mandelbrot" height="200" width="200"></canvas></body>
+<body>
+<h1>Mandelbrot set</h1>
+<div id="set-viewer">
+<div>Some text in the viewer</div>
+</div>
 </html>
