--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <script type="text/javascript" src="source.js"></script>
 </head>
 <body>
-<h1>Mandelbrot set</h1>
+<div id="container">
+<div id="top">
+Click and drag to zoom. Press '0' to reset.
+</div>
 <div id="set-viewer">
+</div>
 </div>
 </html>
