Refactor to use web worker for computation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href="style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="fractals.js"></script>
 <script type="text/javascript" src="source.js"></script>
 </head>
 <body>
